--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <title></title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <h4><a href="#top">Download Excursion (Coming soon!)</a> </h4>
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+      <h4><a href="#top">Download Excursion (Coming soon!)</a> </h4>
+      <video autoplay="" muted="" loop="">
+          <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"
+          type="video/mp4">
+        </video>
+    </div>
+    <div>
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" />
+    </div>
+    <br>
+    <div>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" />
+      <h2>Coming Soon for iPhone and Android</h2>
+      <h4><a href="#top">Download Excursion (Coming soon!)</a> </h4>
+      <h3 class="icon"> © Excursion </h3
+    </div>
 
   </body>
 </html>
