--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" />
       <h2>Coming Soon for iPhone and Android</h2>
       <h4><a href="#top">Download Excursion (Coming soon!)</a> </h4>
-      <h3 class="icon"> © Excursion </h3
+      <h3 class="icon">&copy; Excursion </h3
     </div>
 
   </body>
